Avoid text size adjust on iOS

--- a/visual.css
+++ b/visual.css
@@ -1,3 +1,7 @@
+html {
+	-webkit-text-size-adjust: 100%;
+}
+
 body {
 	margin: 0;
 	padding: 0;
